# musicdl

./: .dockerignore  .gitignore  .goreleaser.yml  Dockerfile  README.md  _build_apk.bat  app_logs.txt  build_and_install.bat  build_android_native.bat  build_android_release.bat  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  package.bat  package_app.bat  package_go.bat  package_ios.sh  push_code.bat  run.bat  run.sh
.github/scripts/: download_android_ffmpeg.ps1  inject_android_ffmpeg.ps1  verify_android_ffmpeg_apk.ps1
.github/workflows/: docker.yml  nightly.yml  pull.yml  push.yml  release.yml
android-native/: build.gradle.kts  gen_icons.py  gradle.properties  settings.gradle.kts
android-native/app/: build.gradle.kts  proguard-rules.pro
core/: audio_ext_test.go  config_store.go  config_store_test.go  download.go  download_test.go  media_tools.go  media_tools_test.go  netease_download_integration_test.go  player.go  player_test.go  service.go  service_album_test.go  service_metadata_test.go  soda_shortlink_test.go  version.go
desktop/: Cargo.toml  README.md  build.rs  index.html  music-dl.desktop
desktop/src/: main.rs
desktop_app/: bundled_ffmpeg_android.go  bundled_ffmpeg_config.go  bundled_ffmpeg_config_test.go  bundled_ffmpeg_other.go  main.go  main_test.go  storage_permission_android.go  storage_permission_other.go
desktop_go/: app.desktop  webview_other.go  webview_windows.go
docs/: Changelog.md  Playground.md  conf.py
mobile/: mobile.go
musicdl/: __init__.py
scripts/: build_cookies_for_joox.py
winres/: init.go
(+142 files in other folders)
